# test_mipmaps_gamma_correction_2

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/stb/: CMakeLists.txt
src/: main.cpp
